Add timeout to busy loops waiting for ADB command completition. Turns the hard hang in PR port-mac68k/37611 into a warning.